update freedomfighter and other controller
