# app/Http/Controllers/EmployeeController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers;
 use Illuminate\Support\Facades\Hash;
 use App\Repositories\ResponseRepository;
 use App\Models\Employee;
+use App\Models\FreedomFighter;
 use App\Models\User;
 use Illuminate\Http\Response;
 use Illuminate\Http\Request;
@@ -171,9 +172,15 @@ class EmployeeController extends Controller
      *               @OA\Property(property="permanent_addr_district", type="text"),
      *               @OA\Property(property="permanent_addr_postcode", type="text"),
      *               @OA\Property(property="department", type="text"),
+     *               @OA\Property(property="job_grade", type="text"),
      *               @OA\Property(property="job_location", type="text"),
      *               @OA\Property(property="joining_date", type="text"),
+     *                @OA\Property(property="freedom_fighter_status", type="text"),
+     *                @OA\Property(property="freedom_fighter_num", type="text"),
+     *                @OA\Property(property="Sector", type="text"),
+     *                @OA\Property(property="fighting_divi", type="text"),
      *               @OA\Property(property="education_history", type="text"),
+     *                @OA\Property(property="document", type="text"),
      *               @OA\Property(property="father_name", type="text"),
      *               @OA\Property(property="mother_name", type="text"),
      *               @OA\Property(property="spouse_name", type="text"),
@@ -240,8 +247,11 @@ class EmployeeController extends Controller
             $addProfile->permanent_addr_postcode = $request->permanent_addr_postcode ?? 0;
             $addProfile->department = $request->department ?? 0;
             $addProfile->job_location = $request->job_location ?? '';
+            $addProfile->job_grade = $request->job_grade ?? '';
             $addProfile->joining_date = $request->joining_date ?? '2000-02-22';
+            $addProfile->freedom_fighter_status = $request->freedom_fighter_status ?? '0';
             $addProfile->education_history = $request->education_history ?? [];
+            $addProfile->document = $request->document ?? [];
             $addProfile->father_name = $request->father_name ?? '';
             $addProfile->mother_name = $request->mother_name ?? '';
             $addProfile->spouse_name = $request->spouse_name ?? '';
@@ -260,10 +270,18 @@ class EmployeeController extends Controller
             //     $updateSpeaker->image = $speaker_image_name;
             // }
             $addProfile->save();
+            $addFreedomFighter = new FreedomFighter;
+            $addFreedomFighter->employee_id = $addProfile->id;
+            $addFreedomFighter->freedom_fighter_num = $request->freedom_fighter_num ?? ''; //
+            $addFreedomFighter->Sector = $request->Sector ?? ''; //
+            $addFreedomFighter->fighting_divi = $request->fighting_divi ?? ''; //freedom_fighter_status
+            $addFreedomFighter->save();
+
 
             return response()->json([
                 'success' =>  true,
-                'data' =>  $addProfile,
+                'profileData' =>  $addProfile,
+                'freedomfighterData' =>  $addProfile,
             ], 200);
         } catch (\Exception $e) {
             return response()->json([
@@ -313,6 +331,7 @@ class EmployeeController extends Controller
      *               @OA\Property(property="permanent_addr_district", type="text"),
      *               @OA\Property(property="permanent_addr_postcode", type="text"),
      *               @OA\Property(property="department", type="text"),
+     *               @OA\Property(property="job_grade", type="text"),
      *               @OA\Property(property="job_location", type="text"),
      *               @OA\Property(property="joining_date", type="text"),
      *               @OA\Property(property="education_history", type="text"),
@@ -388,6 +407,7 @@ class EmployeeController extends Controller
                 'permanent_addr_district' => $request->permanent_addr_district ?? $target->permanent_addr_district,
                 'permanent_addr_postcode' => $request->permanent_addr_postcode ?? $target->permanent_addr_postcode,
                 'department' => $request->department ?? $target->department,
+                'job_grade' => $request->job_grade ?? $target->job_grade,
                 'job_location' => $request->job_location ?? $target->job_location,
                 'joining_date' => $request->joining_date ?? $target->joining_date,
                 'education_history' => $request->education_history ?? [],
